Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9770

Missing code in QScriptDate DaylightSavingTA

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.1
    • 4.6.2
    • Qt Script
    • None
    • 0fa3175421a3329fe4cb3fb9f79f30807105b02f ae574f7341f4f76a1f7de570cc3d56f77781e625

    Description

      Code is missing for Windows platform.

      Converting a QScriptValue to a QDateTime when daylight saving is enabled return a incorrect time.

      Included a sample code to reproduce and a patch candidate.

      Note: Q_UNUSED(t); is not necessary anymore

      Attachments

        1. main.zip
          0.6 kB
        2. patch_462.txt
          0.5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kenthans Kent Hansen (Inactive)
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes