Fix conversion between JavaScript Date and QDateTime

Use JavaScriptCore's conversion functions rather than our own
(incomplete) implementation.
Specifically, this means daylight saving time is finally
handled correctly on Windows.

Task-number: QTBUG-9770
Reviewed-by: Olivier Goffart