src/script/utils/utils.pri
@@ -1,5 +1,0 @@
-SOURCES += \
-    $$PWD/qscriptdate.cpp
-
-HEADERS += \
-    $$PWD/qscriptdate_p.h
